--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -29,7 +29,7 @@ body,
 input,
 textarea,
 button {
-  font: 500 1rem Inter sans-serif;
+  font: 500 1rem sans-serif;
   color: var(--gray-500);
 }
 
@@ -40,7 +40,7 @@ h4,
 h5,
 h6 {
   font-weight: 600;
-  font-family: Lexend, sans-serif;
+  font-family: "Lexend", sans-serif;
   color: var(--gray-800);
 }
 
