--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -2,6 +2,7 @@
   padding: 3rem 4rem;
   width: 26.5rem;
   height: 100vh;
+
   background: var(--purple-500);
   color: var(--white);
 
@@ -30,14 +31,36 @@
   }
 }
 
+.currentEpisode {
+  text-align: center;
+
+  img {
+    border-radius: 1.5rem;
+  }
+
+  strong {
+    display: block;
+    margin-top: 2rem;
+    font: 600 1.25rem Lexend, sans-serif;
+    line-height: 1.75rem;
+  }
+
+  span {
+    display: block;
+    margin-top: 1rem;
+    opacity: 0.6;
+    line-height: 1.5rem;
+  }
+}
+
 .emptyPlayer {
   width: 100%;
   height: 20rem;
   border: 1.5px dashed var(--purple-300);
   border-radius: 1.5rem;
   background: linear-gradient(
-    134.8deg,
-    rgba(145, 100, 250, 0.8) 0%,
+    143.8deg,
+    rgba(145, 100, 250, 0.8),
     rgba(0, 0, 0, 0) 100%
   );
 
@@ -52,7 +75,7 @@
 .progress {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
+  gap: 1rem;
   font-size: 0.875rem;
 
   span {
@@ -60,16 +83,15 @@
     width: 4rem;
     text-align: center;
   }
+}
 
-  .slider {
-    flex: 1;
-
-    .emptySlider {
-      width: 100%;
-      height: 4px;
-      background: var(--purple-300);
-      border-radius: 2px;
-    }
+.slider {
+  flex: 1;
+  .emptySlider {
+    width: 100%;
+    height: 4px;
+    background: var(--purple-300);
+    border-radius: 2px;
   }
 }
 
@@ -84,12 +106,25 @@
     background: transparent;
     border: 0;
     font-size: 0;
+    transition: filter 0.2s;
+
+    &:disabled {
+      cursor: default;
+    }
+
+    &:hover:not(:disabled) {
+      filter: brightness(0.7);
+    }
 
     &.playButton {
       width: 4rem;
       height: 4rem;
       border-radius: 1rem;
       background: var(--purple-400);
+
+      &:hover:not(:disabled) {
+        filter: brightness(0.95);
+      }
     }
   }
 }
